- Milk that can be made into heavy cream


CHECK https://github.com/AreYSerious/VintageTranslation FOR TRANSLATIONS....

1.7.3
NEW FOOD ADDITIONS FINALLY???
- Wildcraft stuff:
-- Wildcraft nut butter added (like peanut butter, but with other nuts)
-- Nuts working in fruit bread & muffins & trail mix
-- added herbs to Dressing
-- mixed herbs added
-- herbal soft dough added
- Dialogue added to Kitchenware Trader
- added meatloaf?
- Soulstorm slop accepts all poisonous mushrooms and Wildcraft poisonous berries
- Salt is its own topping in porridge, like other meals
- Part-baked muffins don't crash the handbook - DONE!!!
- Cottage cheese mixing bowl recipe added (vinegar + pasteruized milk)
- Fruit bread and muffin overlays fixed
- Cured deluxe sausage recipes fixed - DONE!!!
- Liquid gelatin and pre-gelatin no longer allowed in fruit bar or muffin recipes - DONE!!!


1.7.2
- Fruit bar textures fixed
- Aged meat hangs on meat hooks properly
- Sunflower and acorn bread crumbs have textures in small trough
- Liquid patches use 'add' instead of 'addmerge' to avoid double transitionProps

1.7.1
- Bread crumbs can go into troughs properly
- Dried/dehydrated Wildcraft Fruits texture fixed in pies
- Cooked Chopped Pickled Bell Pepper (Part-Baked) doesn't crash handbook
- Ancient Tools soft dough & pasta recipe added
- Meathook transforms fixed (yet again)
- Alchemy herbs hang on meat racks correctly
- Sausage hang on Alchemy herb racks correctly
- Soulstorm slop can be put into pies
- fpHandTransform removed from all files

Back-end updates: 
- JSONs greatly trimmed down
- Many, many shapes removed & consolidated
- Use new ACA renderIngredients method
- Patches use "addmerge" instead of "add"
- Sushi variants slimmed down, remaps added



1.7.0

HERBARIUM-WILDCRAFT:
Wildcraft Fruits, Nuts, Spices, and Herbs integrated into all meals and items (required approximately 1 billion hours of work)

MORE ANIMALS:
- Eggs only require 0.5 L to boil, not 1 L

FOOD UPDATES: