@@ -12,16 +12,16 @@
 		},
 		"inBowlShape": { "base": "game:block/food/meal/liquid" },
 		nutritionPropsWhenInMealByType: {
-			"*-cloudberry": { satiety: 300, health: 4, foodcategory: "Fruit" },
-			"*-husktomato": { satiety: 300, health: 2, foodcategory: "Fruit" },
-			"*-juniper": { satiety: 300, health: 2, foodcategory: "Fruit" },
-			"*-wolfberry": { satiety: 300, health: -7.5, foodcategory: "Fruit" },
-			"*-bitternightshade": { satiety: 300, health: -5, foodcategory: "Fruit" },
-			"*-spindle": { satiety: 300, health: -2.5, foodcategory: "Fruit" },
-			"*-blacknightshadeunripe": { satiety: 300, health: -1.25, foodcategory: "Fruit" },
-			"*-crowseye": { satiety: 300, health: -12.5, foodcategory: "Fruit" },
-			"*-seamango": { satiety: 300, health: -10, foodcategory: "Fruit" },
-			"*": { satiety: 300, health: 1, foodcategory: "Fruit" },
+			"*-cloudberry": { satiety: 150, health: 4, foodcategory: "Fruit" },
+			"*-husktomato": { satiety: 150, health: 2, foodcategory: "Fruit" },
+			"*-juniper": { satiety: 150, health: 2, foodcategory: "Fruit" },
+			"*-wolfberry": { satiety: 150, health: -7.5, foodcategory: "Fruit" },
+			"*-bitternightshade": { satiety: 150, health: -5, foodcategory: "Fruit" },
+			"*-spindle": { satiety: 150, health: -2.5, foodcategory: "Fruit" },
+			"*-blacknightshadeunripe": { satiety: 150, health: -1.25, foodcategory: "Fruit" },
+			"*-crowseye": { satiety: 150, health: -12.5, foodcategory: "Fruit" },
+			"*-seamango": { satiety: 150, health: -10, foodcategory: "Fruit" },
+			"*": { satiety: 150, health: 1, foodcategory: "Fruit" },
 		},
 		waterTightContainerProps: {
 			containable: true,
@@ -33,16 +33,16 @@
 				stack: { type: "item", code: "expandedfoods:wildpotentwineportion-{fruit}" }
 			},
 			nutritionPropsPerLitreByType: {
-				"*-cloudberry": { saturation: 200, health: 4, intoxication: 0.45, foodcategory: "Fruit" },
-				"*-husktomato": { saturation: 200, health: 2, intoxication: 0.45, foodcategory: "Fruit" },
-				"*-juniper": { saturation: 200, health: 2, intoxication: 0.45, foodcategory: "Fruit" },
-				"*-wolfberry": { saturation: 200, health: -7.5, intoxication: 0.45, foodcategory: "Fruit" },
-				"*-bitternightshade": { saturation: 200, health: -5, intoxication: 0.45, foodcategory: "Fruit" },
-				"*-spindle": { saturation: 200, health: -2.5, intoxication: 0.45, foodcategory: "Fruit" },
-				"*-blacknightshadeunripe": { saturation: 200, health: -1.25, intoxication: 0.45, foodcategory: "Fruit" },
-				"*-crowseye": { saturation: 200, health: -12.5, intoxication: 0.45, foodcategory: "Fruit" },
-				"*-seamango": { saturation: 200, health: -10, intoxication: 0.45, foodcategory: "Fruit" },
-				"*": { saturation: 200, "health": 1, "intoxication": 0.45, foodcategory: "Fruit" },
+				"*-cloudberry": { saturation: 100, health: 4, intoxication: 0.45, foodcategory: "Fruit" },
+				"*-husktomato": { saturation: 100, health: 2, intoxication: 0.45, foodcategory: "Fruit" },
+				"*-juniper": { saturation: 100, health: 2, intoxication: 0.45, foodcategory: "Fruit" },
+				"*-wolfberry": { saturation: 100, health: -7.5, intoxication: 0.45, foodcategory: "Fruit" },
+				"*-bitternightshade": { saturation: 100, health: -5, intoxication: 0.45, foodcategory: "Fruit" },
+				"*-spindle": { saturation: 100, health: -2.5, intoxication: 0.45, foodcategory: "Fruit" },
+				"*-blacknightshadeunripe": { saturation: 100, health: -1.25, intoxication: 0.45, foodcategory: "Fruit" },
+				"*-crowseye": { saturation: 100, health: -12.5, intoxication: 0.45, foodcategory: "Fruit" },
+				"*-seamango": { saturation: 100, health: -10, intoxication: 0.45, foodcategory: "Fruit" },
+				"*": { saturation: 100, "health": 1, "intoxication": 0.45, foodcategory: "Fruit" },
 			},
 		},
 		"distillationPropsbytype": {		
@@ -54,14 +54,14 @@
 	},
 	transitionableProps: [{
     		type: "Perish",
-    		freshHours: { avg: 672 },
+    		freshHours: { avg: 6720 },
     		transitionHours: { avg: 288 },
     		transitionedStack: { type: "item", code: "game:vinegarportion" },
 			transitionRatio: 0.005
   	},
 	{
     		type: "Cure",
-    		freshHours: { avg: 672 },
+    		freshHours: { avg: 6720 },
     		transitionHours: { avg: 2016 },
     		transitionedStack: { type: "item", code: "wildpotentwineportion-{fruit}" },
     		transitionRatio: 1
