@@ -12,16 +12,16 @@
 		},
 		"inBowlShape": { "base": "game:block/food/meal/liquid" },
 		nutritionPropsWhenInMealByType: {
-			"*-cloudberry": { satiety: 270, health: 3, foodcategory: "Fruit" },
-			"*-husktomato": { satiety: 270, health: 1.5, foodcategory: "Fruit" },
-			"*-juniper": { satiety: 270, health: 1.5, foodcategory: "Fruit" },
-			"*-wolfberry": { satiety: 270, health: -15, foodcategory: "Fruit" },
-			"*-bitternightshade": { satiety: 270, health: -10, foodcategory: "Fruit" },
-			"*-spindle": { satiety: 270, health: -5, foodcategory: "Fruit" },
-			"*-blacknightshadeunripe": { satiety: 270, health: -2.5, foodcategory: "Fruit" },
-			"*-crowseye": { satiety: 270, health: -25, foodcategory: "Fruit" },
-			"*-seamango": { satiety: 270, health: -20, foodcategory: "Fruit" },
-			"*": { satiety: 270, health: 0.5, foodcategory: "Fruit" },
+			"*-cloudberry": { satiety: 135, health: 3, foodcategory: "Fruit" },
+			"*-husktomato": { satiety: 135, health: 1.5, foodcategory: "Fruit" },
+			"*-juniper": { satiety: 135, health: 1.5, foodcategory: "Fruit" },
+			"*-wolfberry": { satiety: 135, health: -15, foodcategory: "Fruit" },
+			"*-bitternightshade": { satiety: 135, health: -10, foodcategory: "Fruit" },
+			"*-spindle": { satiety: 135, health: -5, foodcategory: "Fruit" },
+			"*-blacknightshadeunripe": { satiety: 135, health: -2.5, foodcategory: "Fruit" },
+			"*-crowseye": { satiety: 135, health: -25, foodcategory: "Fruit" },
+			"*-seamango": { satiety: 135, health: -20, foodcategory: "Fruit" },
+			"*": { satiety: 135, health: 0.5, foodcategory: "Fruit" },
 		},
 		waterTightContainerProps: {
 			containable: true,
@@ -33,16 +33,16 @@
 				stack: { type: "item", code: "expandedfoods:wildstrongwineportion-{fruit}" }
 			},
 			nutritionPropsPerLitreByType: {
-				"*-cloudberry": { saturation: 180, health: 3, intoxication: 0.3, foodcategory: "Fruit" },
-				"*-husktomato": { saturation: 180, health: 1.5, intoxication: 0.3, foodcategory: "Fruit" },
-				"*-juniper": { saturation: 180, health: 1.5, intoxication: 0.3, foodcategory: "Fruit" },
-				"*-wolfberry": { saturation: 180, health: -15, intoxication: 0.3, foodcategory: "Fruit" },
-				"*-bitternightshade": { saturation: 180, health: -10, intoxication: 0.3, foodcategory: "Fruit" },
-				"*-spindle": { saturation: 180, health: -5, intoxication: 0.3, foodcategory: "Fruit" },
-				"*-blacknightshadeunripe": { saturation: 180, health: -2.5, intoxication: 0.3, foodcategory: "Fruit" },
-				"*-crowseye": { saturation: 180, health: -25, intoxication: 0.3, foodcategory: "Fruit" },
-				"*-seamango": { saturation: 180, health: -20, intoxication: 0.3, foodcategory: "Fruit" },
-				"*": { saturation: 180, "health": 0.5, "intoxication": 0.3, foodcategory: "Fruit" },
+				"*-cloudberry": { saturation: 90, health: 3, intoxication: 0.3, foodcategory: "Fruit" },
+				"*-husktomato": { saturation: 90, health: 1.5, intoxication: 0.3, foodcategory: "Fruit" },
+				"*-juniper": { saturation: 90, health: 1.5, intoxication: 0.3, foodcategory: "Fruit" },
+				"*-wolfberry": { saturation: 90, health: -15, intoxication: 0.3, foodcategory: "Fruit" },
+				"*-bitternightshade": { saturation: 90, health: -10, intoxication: 0.3, foodcategory: "Fruit" },
+				"*-spindle": { saturation: 90, health: -5, intoxication: 0.3, foodcategory: "Fruit" },
+				"*-blacknightshadeunripe": { saturation: 90, health: -2.5, intoxication: 0.3, foodcategory: "Fruit" },
+				"*-crowseye": { saturation: 90, health: -25, intoxication: 0.3, foodcategory: "Fruit" },
+				"*-seamango": { saturation: 90, health: -20, intoxication: 0.3, foodcategory: "Fruit" },
+				"*": { saturation: 90, "health": 0.5, "intoxication": 0.3, foodcategory: "Fruit" },
 			},
 		},
 		"distillationPropsbytype": {		
@@ -54,14 +54,14 @@
 	},
 	transitionableProps: [{
     	type: "Perish",
-    	freshHours: { avg: 672 },
+    	freshHours: { avg: 6720 },
     	transitionHours: { avg: 288 },
     	transitionedStack: { type: "item", code: "game:vinegarportion" },
     	transitionRatio: 0.25
 	},
 	{
     	type: "Cure",
-    	freshHours: { avg: 672 },
+    	freshHours: { avg: 6720 },
     	transitionHours: { avg: 2016 },
     	transitionedStack: { type: "item", code: "wildpotentwineportion-{fruit}" },
     	transitionRatio: 1
