@@ -6,7 +6,7 @@
       {
         "type": "Perish",
         "freshHours": {
-          "avg": 336
+          "avg": 3360
         },
         "transitionHours": {
           "avg": 144
@@ -20,7 +20,7 @@
       {
         "type": "Cure",
         "freshHours": {
-          "avg": 336
+          "avg": 3360
         },
         "transitionHours": {
           "avg": 1008
@@ -39,7 +39,7 @@
     "op": "addmerge",
     "path": "/attributes/nutritionPropsWhenInMeal",
     "value": {
-        "saturation": 160,
+        "saturation": 80,
         "foodcategoryByType": {
             "*-spelt": "grain", 
             "*-rice": "grain",             
