@@ -64,7 +64,8 @@ NEW FOOD ADDITIONS FINALLY???
 -- added herbs to Dressing
 -- mixed herbs added
 -- herbal soft dough added
-- Dialogue added to Kitchenware Trader
+-- Wildcraft fruits updated
+- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
 - added meatloaf?
 - Soulstorm slop accepts all poisonous mushrooms and Wildcraft poisonous berries
 - Salt is its own topping in porridge, like other meals
@@ -73,6 +74,10 @@ NEW FOOD ADDITIONS FINALLY???
 - Fruit bread and muffin overlays fixed
 - Cured deluxe sausage recipes fixed - DONE!!!
 - Liquid gelatin and pre-gelatin no longer allowed in fruit bar or muffin recipes - DONE!!!
+- Candle recipes updated
+- Cider/wine adjusted to have half nutrition but last 10 times as long - DONE!!!
+- New 1.20 clays integrated
+- Fish nutrition adjusted to match vanilla
 
 
 1.7.2
